<resources>
    <string name="app_name">MeatDeliveryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vegetables">Овощи и фрукты</string>
    <string name="categories">Категории</string>
    <string name="bread">Хлеб</string>
    <string name="grocery">Бакалея</string>
    <string name="milk_eggs">Молоко, яйца</string>
    <string name="milk">Молоко</string>
    <string name="sweets">Сладости</string>
    <string name="fish">Рыба</string>
    <string name="meat">Мясо</string>
    <string name="drinks">Напитки</string>
    <string name="logged_in_as">login</string>
    <string name="not_logged_in">notLogin</string>
    <string name="add">+</string>
    <string name="delete">-</string>
    <string name="price">999р</string>
    <string name="name">название название название название</string>
    <string name="milk_products_and_eggs">Молочные продукты и яйца</string>
    <string name="eggs">Яйца</string>
    <string name="cannedFood">Консерированные продукты</string>
    <string name="frozenFood">Замороженные продукты</string>
    <string name="oilAndSpices">Масло и специи</string>
    <string name="sausage">Колбасы, сосиски</string>
    <string name="sauce">Соусы</string>
    <string name="snacks">Снэки</string>
    <string name="hygiene">Гигиена</string>
    <string name="coffeeAndTea">Кофе и чай</string>
    <string name="babyFood">Детские продукты</string>
    <string name="cleaning">Для дома</string>
    <string name="medicine">Аптечка</string>
    <string name="add_to_cart">Добавить</string>
    <string name="number1">Продавец — Физическое лицо, Шабаев Тимур Рустамович.\n Пользователь — любое физическое лицо, осуществляющее доступ к Сервису посредством сети Интернет.\nСервис — программное приложение «Лавка Доставка» для устройств, имеющих доступ в сеть Интернет, работающее на операционных системах Android.\nИнтернет-магазин — раздел Сервиса, где представлены Товары, предлагаемые Продавцом для приобретения, а также условия оплаты и доставки Товаров Пользователям.\nТовар — продукты питания, бытовые средства для дома и иные товары, представленные к продаже в Интернет-магазине.\nЗаказ — должным образом оформленный запрос Пользователя на приобретение и доставку Товаров, выбранных в Интернет-магазине.</string>
    <string name="number2">2.1. Продавец и Покупатель гарантируют, что обладают необходимой право- и дееспособностью, а также всеми правами, необходимыми для заключения и исполнения договора розничной купли-продажи дистанционным способом. \n2.2. Покупатель обязуется ознакомиться с условиями настоящей оферты, с Политикой Конфиденциальности, Пользовательским соглашением. \n2.3. Продавец оставляет за собой право вносить изменения в настоящую оферту, в связи с чем Покупатель обязуется самостоятельно отслеживать наличие изменений в настоящей оферте. \n2.4. При оформлении заказа Товаров Покупатель тем самым подтверждает, что он исполнил обязанности, предусмотренные пунктом 2.2. настоящей оферты. \n2.5. Договор розничной купли-продажи дистанционным способом считается заключенным с момента получения Продавцом сообщения о намерении Покупателя приобрести Товары. \n2.6. Срок, в течение которого действует предложение о заключении договора розничной купли-продажи дистанционным способом, является бессрочным.</string>
    <string name="number3">3.1. Продавец продает Товары по ценам, представленным на Сайте Продавца, и доставляет Товар Курьерской службой, а Покупатель производит оплату и принимает Товары в соответствии с условиями настоящей оферты. \n3.2. Право собственности на Товары переходит к Покупателю в момент приемки Товаров Покупателем.</string>
    <string name="number4">4.1. Продавец вправе осуществлять рассылку уведомлений о проводимых акциях и рекламных материалов Пользователю по сетям электросвязи, при условии получения от Пользователя согласия на совершение указанных действий. \n4.2. Покупатель имеет право в любой момент отписаться от уведомлений, указанных в пункте 4.1. настоящей оферты, и подписаться на уведомления вновь. \n4.3. Продавец вправе совершать вызовы в адрес Пользователя в целях проведения маркетинговых исследований среди Покупателей и исследования предпочтений Покупателей; проведения розыгрышей призов среди Покупателей; проведения анализа оказываемых Продавцом услуг; урегулирования конфликтных ситуаций без получения от Пользователя согласия на совершение всех перечисленных выше действий. \n4.4. Продавец вправе отправлять сервисные сообщения, информирующие Покупателя о совершенном им заказе, его составе, этапах его обработки и о готовности заказа; такие сервисные сообщения отправляются автоматически, не могут быть отклонены Покупателем, направлены на контроль качества оказания услуг Покупателю и его информирование о надлежащем исполнении Продавцом своих обязательств по договору купли-продажи дистанционным способом.</string>
    <string name="number5">5.1. Заказ Покупателя может быть оформлен по Телефону и/или через приложение. \n5.2. Покупатель обязуется предоставить достоверные данные, необходимые и достаточные для исполнения договора розничной купли-продажи Товаров дистанционным способом. \n5.3. В случае возникновения у Покупателя дополнительных вопросов, касающихся Товаров, перед оформлением Заказа Покупатель должен обратиться к Продавцу по Телефону для получения необходимой информации, в соответствии с режимом работы, указанным на Сайте. \n5.4. Покупатель может заказать только те Товары, которые есть в наличии у Продавца на момент оформления заказа Товаров у Продавца. \n5.5. Покупатель не имеет право изменить состав заказа. \n5.6. При оформлении заказа по Телефону Продавец вправе осуществлять аудиозапись телефонного разговора с Пользователем, если указанные действия необходимы Продавцу для исполнения обязанностей, предусмотренных настоящей офертой, и оценки качества оказанных услуг, без получения от Пользователя согласия на совершение указанных действий. \n5.7. При оформлении заказа посредством заполнения электронной формы заказа на Сайте Покупатель создает учетную запись в соответствии с Пользовательским соглашением, указанным на Сайте. \n5.8. Если у Продавца отсутствует необходимое количество или ассортимент заказанных Покупателем Товаров, Продавец информирует об этом Покупателя по телефону в течение 180 минут после получения заказа Товаров от Покупателя. Покупатель вправе согласиться принять Товары в ином количестве или ассортименте, либо аннулировать свой заказ Товаров. в случае неполучения ответа Покупателя Продавец вправе аннулировать Заказ Покупателя в полном объеме. 5.9. Продавец вправе временно приостановить прием заказов Товаров в случае технических неполадок, не позволяющих принять заказ Товаров, или отсутствия ингредиентов, необходимых для изготовления Товаров.</string>
    <string name="number6">6.1. Доставка Товаров осуществляется Курьерской службой по фактическому адресу, указанному Покупателем, при оформлении заказа или выборкой Товаров Покупателем (самовывозом). \n6.2. Доставка Товаров в пределах зоны доставки осуществляется в соответствии с режимом работы Продавца, указанным на Сайте. \n6.3. Доставка Товаров по адресам, не входящим в зону доставки, не осуществляется. \n6.4. Срок доставки заказа Товаров – 180 минут с момента принятия заказа Товаров. В случае нарушения установленных сроков доставки Товаров, в силу обстоятельств непреодолимой силы («форс-мажор») в соответствии с Разделом 9 настоящей оферты Продавец не считается просрочившим доставку. В случае поступления большого количества заказов, а также сложной дорожной обстановки или плохих погодных условий время доставки может быть увеличено до 240 минут либо заказ может быть отменён Продавцом. \n6.5. Доставка осуществляется при условии заказа Товаров на сумму минимального заказа стоимостью 190 рублей. \n6.6. Продавец вправе отказаться от исполнения договора розничной купли-продажи дистанционным способом в том случае, если Курьерская служба по прибытии к фактическому адресу доставки Покупателя, не может осуществить фактическую передачу доставленных Товаров по вине Покупателя (Покупатель в течение 10 минут не отвечает на телефонный вызов или не открывает дверь Курьерской службе).</string>
    <string name="number7">7.1. Цены на Товары определяются Продавцом в одностороннем порядке и указываются на Сайте. Цена на заказанный Покупателем Товар изменению не подлежит.
\n7.2. Оплата Товаров Покупателем производится в рублях Российской Федерации одним из следующих способов:
\n7.2.1. оплата осуществляется по факту получения Товаров наличными денежными средствами, оплата наличными денежными средствами ограничена максимальной суммой. Максимальная сумма заказа, при которой возможна оплата наличными денежными средствами, определяется Продавцом в одностороннем порядке и указывается на Сайте. Заказ превышающий размер максимальной суммы, оплачивается в соответствии с п.7.2.2. настоящей оферты;
\n7.2.2. безналичным переводом банковской картой;
\n7.3. Выдача либо направление Покупателю кассового чека:
\n7.3.1. Направляется в электронном виде на почту Покупателя.</string>
    <string name="number8">8.1. Возврат Товара надлежащего качества не допускается. \n8.2. Продавец обязан передать Покупателю Товары, которые полностью соответствуют его заказу, качество которых соответствует информации, представленной Покупателю при заключении договора розничной купли-продажи дистанционным способом, а также информации, доведенной до его сведения при передаче Товаров (на этикетке или вкладыше, прикрепленных к Товарам или их упаковке, либо другими способами, предусмотренными для отдельных видов Товаров). \n8.3. При получении Товаров Покупатель проверяет соответствие полученных Товаров своему заказу, комплектность и отсутствие претензий к внешнему виду доставленных Товаров в течение 10 (Десяти) минут после получения Товаров. Внешний вид Товаров может отличаться от их рекламного изображения. \n8.4. В случае получения некачественных Товаров, либо несоответствия полученных Товаров заказанному (отсутствие заявленных ингредиентов в Товаре), Покупатель вправе потребовать замены таких Товаров Товарами надлежащего качества сразу в течение 5 (Пяти) минут после получения Товаров. \n8.5. В случае невыполнения порядка предъявления претензии Покупателя по внешнему виду Товаров и их комплектности, предусмотренных пунктом 8.3, пунктом 8.4 настоящей оферты, претензии не принимаются.</string>
    <string name="number9">9.1. Любая из Сторон освобождается от ответственности за полное или частичное неисполнение своих обязательств по настоящей оферте, если это неисполнение было вызвано обстоятельствами непреодолимой силы. Обстоятельства непреодолимой силы означают чрезвычайные события и обстоятельства, которые Стороны не могли ни предвидеть, ни предотвратить разумными средствами. Такие чрезвычайные события или обстоятельства включают в себя, в частности: забастовки, наводнения, пожары, землетрясения и иные стихийные бедствия, войны, военные действия и так далее.</string>
    <string name="number10">10.1. Продавец не несет ответственности за ущерб, причиненный Покупателю вследствие ненадлежащего использования им Товаров, приобретённых у Продавца. \n10.2. Продавец не отвечает за убытки Покупателя, возникшие в результате неправильного заполнения Заказа, в том числе неправильного указания своих данных. \n10.3. В случае злоупотребления Покупателем правами потребителя, включая, но не ограничиваясь, если Покупатель отказался от приемки и/или оплаты заказанного и доставленного Товара, Продавец вправе реализовать свое право на самозащиту, а именно: не принимать от него будущие Заказы. \n10.4. В случае одностороннего отказа Продавца от исполнения договора розничной купли-продажи дистанционным способом в соответствии с пунктом \n6.6. настоящей публичной оферты, Продавец вправе реализовать свое право на самозащиту, взыскать убытки с Покупателя. в случае, если Покупатель оплатил Товар до его доставки, оплаченная сумма не возвращается.
    \n\n\n\n\n\n
    </string>
</resources>