<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:background="@drawable/white"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="12dp"
    android:gravity="start|center_vertical">



    <LinearLayout
        android:layout_marginEnd="10dp"
        android:background="@drawable/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:src="@drawable/malina_protert" />

        <TextView
            android:id="@+id/textViewNameItem"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewPriceItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddToCartItem"
                android:visibility="visible"
                android:text="@string/add_to_cart"
                android:textSize="10sp"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <ImageButton

                android:visibility="gone"
                android:id="@+id/buttonAddItem"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/add_button" />
            <TextView
                android:id="@+id/textViewQuantityItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />
            <ImageButton
                android:visibility="gone"
                android:id="@+id/buttonDeleteItem"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:src="@drawable/delete_button" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>